--- a/React/FilmPage/src/App.css
+++ b/React/FilmPage/src/App.css
@@ -61,6 +61,8 @@
 ul {
   list-style-type: none;
   margin: 0 auto;
+  margin-left: 25%;
+  margin-right: 25%;
   text-align: center;
   padding: 10pt;
 }
@@ -174,7 +176,7 @@ header button {
 .modal-dialog {
   margin-left: auto;
   margin-right: auto;
-  margin-top: 100pt;
+  margin-top: 25pt;
   max-width: 500pt;
   background-color: #181818;
   border-radius: 20px;
